Revert "fix(form): gap between the form fields (#1576)" (#1578)
This reverts commit 3cdafc02590c59c02db32a15389ea2115ea05f54.

--- a/packages/form/src/assets/css/form.css
+++ b/packages/form/src/assets/css/form.css
@@ -2,7 +2,7 @@ form {
   align-items: stretch;
   display: flex;
   flex-direction: column;
-  gap: var(--form-gap);
+  gap: var(--form-gap, 1.5rem);
   justify-content: flex-start;
   width: 100%;
 }
@@ -25,7 +25,8 @@ form .field .p-dropdown {
 }
 
 form .field .p-dropdown > span.p-dropdown-label {
-  padding: var(--form-input-padding-v) var(--form-input-padding-h);
+  padding: var(--form-input-padding-v, 0.75rem)
+    var(--form-input-padding-h, 0.65rem);
 }
 
 form .field .p-calendar > input {
